adição de javaScript

--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -1,7 +1,13 @@
+
+/* base.html */
 html {
 	font-family: arial;
 }
-body.corpo {
+* {
+	box-sizing: border-box;
+}
+
+.corpo {
 	margin: 0px;
 }
 .img_logo {
@@ -51,6 +57,7 @@ a.link:active {
 	border-radius:5%;
 	line-height: 1.7em;
 }
+.show{display:block;}
 .menuhidden {
 	position: relative;
 	height: auto;
@@ -64,9 +71,6 @@ a.link:active {
 	margin: 0.5em;
 	margin-bottom: 0.1em;
 	padding-top:0.3em;
-}
-.menuhidden:hover .dropmenu {
-	display: block;
 }
 footer {
 	background-color:#e4e4e4;
@@ -104,3 +108,66 @@ div.copyright {
 		padding-top: 1em;
 	}
 }
+/* index.html */
+.Banner {
+	position:relative;
+	width: 100%;
+}
+.BannerCell {
+	display: block;
+	position: relative;
+	width: 100%;
+	margin-top: 3.53em;
+}
+.img_banner {
+	margin-top: 3.53em;
+}
+article.sobre {
+	display: flex;
+	align-items: center;
+	flex-flow: column wrap;
+}
+h1.sobre {
+	display: flex;
+	
+}
+p.sobre {
+	display: flex;
+	width:50%;
+	border-bottom: 1px solid black;
+	padding-bottom: 0.3em;
+	text-align: justify;
+}
+article.comentsAlunos {
+	display: grid;
+	grid-template: 10% 10% 35% 10% 35% / 1fr;
+	margin: 1em;
+	margin-top: 0em;
+	text-align: justify;
+}
+h2.comentsAlunos, h3.comentsAlunos {
+	text-align: center;
+	color: #676f7c;
+}
+h3.comentsAlunos {
+	color: #474747;
+}
+@media only screen and (min-width: 320px) and (max-width: 736px)
+{
+	article.sobre {
+		display: flex;
+		align-items: center;
+		flex-flow: column wrap;
+	}
+	/*
+	.Banner {
+		display: none;
+	}
+	.BannerCell {
+		display: block;
+		position: relative;
+		width: 100%;
+		margin-top: 3.53em;
+	}*/
+}
+
