--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,20 +1,18 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block estiloUnico %}{% static '/' %}css/home.css{% endblock %}
-
 {% block title %}Faculdade Impacta - Home{% endblock %}
 
 {% block main %}
 	<section>
 		<div class = "Banner">
 			<img class = "Banner img_banner" src = "{% static '/' %}img/Propaganda-vestibular.png"
-			alt = "propaganda do vestibular 2018" />
+			alt = "propaganda do vestibular 2018" id = "bannerIndex"/>
 		</div>
-		<div class = "BannerCell">
+		<!--<div class = "BannerCell">
 			<img class = "BannerCell" src = "{% static '/' %}img/BannerCell.png"
 			alt = "propaganda do vestibular 2018 mobile" />
-		</div>
+		</div>-->
 		<article class = "sobre">
 			<h1 class = "sobre">Sobre</h1>
 			<p class = "sobre" > A Faculdade Impacta Tecnologia nasceu da percepção de um Grupo, 
