box de login adicionada

--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -18,10 +18,11 @@ html {
 }
 nav.menu {
 	display: flex;
-	justify-content: space-between;
+	flex-flow: row wrap;
+	justify-content:space-between;
 	background-color:#2a3c4a;
 	position: fixed;
-	width: 101%;
+	width: 100%;
 	top: -1px;
 	left: -1px;
 	right: -1px;
@@ -29,6 +30,8 @@ nav.menu {
 	opacity: 0.88;
 }
 a.link {
+	display: flex;
+	align-self: flex-start;
 	text-decoration: none;
 	width: 1em;
 	height: 1em;
@@ -58,7 +61,10 @@ a.link:active {
 	line-height: 1.7em;
 }
 .show{display:block;}
+.showF{display:flex;}
+
 .menuhidden {
+	display:block;
 	position: relative;
 	height: auto;
 	width: 3em;
@@ -99,6 +105,58 @@ div.copyright {
 	justify-content: center;
 	text-align: center;
 }
+	/* box de login */
+	.userLogin{
+		display:flex;
+		flex-flow:column wrap;
+		position: relative;
+		align-items: center;
+		width:20em;
+		background-color: #2a3c4a;
+		z-index: 1;
+	}
+
+	.userIcon{
+		width:2.3em;
+		height:2.3em;
+	}
+
+	div.loginForm{
+		display:none;
+		position: absolute;
+	}
+
+	.loginForm{
+		display:flex;
+		flex-flow:column wrap;
+		align-items: center;
+		width:80%;
+		margin-bottom: 1em;
+	}
+
+	.inputGroup{
+		display:flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-top:1em;
+		color: white;
+		font-weight: bold;
+		width:100%;
+	}
+
+	.inputField{
+		width:75%;
+		height:2em;
+		border:none;
+		border-radius:5px;
+	}
+
+	.btnLogin{
+		margin-top:1.3em;
+		border-radius: 10px;
+		font-size: 1.2em;
+		width:40%;
+	}
 @media only screen and (min-width: 320px) and (max-width: 736px)
 {
 	h3.sigaImpacta {
@@ -152,6 +210,7 @@ h2.comentsAlunos, h3.comentsAlunos {
 h3.comentsAlunos {
 	color: #474747;
 }
+
 @media only screen and (min-width: 320px) and (max-width: 736px)
 {
 	article.sobre {
@@ -159,15 +218,6 @@ h3.comentsAlunos {
 		align-items: center;
 		flex-flow: column wrap;
 	}
-	/*
-	.Banner {
-		display: none;
-	}
-	.BannerCell {
-		display: block;
-		position: relative;
-		width: 100%;
-		margin-top: 3.53em;
-	}*/
+	
 }
 
