--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,7 +15,23 @@
 			<a class = "link" href = "/" title = "Logo Faculdade Impacta">
 				<img class = "img_logo" src = "{% static '/' %}img/logo-novo.png" alt = "Logo e link para a home"/>
 			</a>
-			<div class = "menuhidden" onClick="dropMenu()">
+			<div class = "userLogin">
+				<img class = "userIcon" src="{% static '/' %}img/userIcon.jpg" onClick="dropMenu('loginForm')"/>
+				<div class="loginForm" id="loginForm">
+				<form method="POST" class="loginForm">
+					<div class="inputGroup">
+						<label for:"ra">RA: </label>
+						<input name="ra" id="ra" class="inputField"required/>
+					</div>
+					<div class="inputGroup">
+						<label for:"senha">Senha: </label>
+						<input name="senha" id="senha"class="inputField" type="password" required/>
+					</div>
+					<button class="btnLogin" type="submit">Entrar</button>
+				</form>
+				</div>
+			</div>
+			<div class = "menuhidden" onClick="dropMenu('dropmenu')">
 				<img src = "{% static '/' %}img/menu-icon-8.png" class="menuIcon"/>
 				<ul class = "dropmenu" id="dropmenu">
 					<li><a class = "link" href = "lista_curso.html" >Lista de Cursos</a></li>
