Login adicionado e Controle de acesso rudimentar

--- a/core/templates/disciplina.html
+++ b/core/templates/disciplina.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
+
 {% load static %}
 
-{% block estiloUnico %}{% static '/' %}css/disc.css{% endblock %}
+{% block script_unico %}{% endblock %}
+
+{% block login %}{% endblock %}
+
+{% block img_user %}{% endblock %}
+
+{% block estilo_unico %}{% static '/' %}css/disc.css{% endblock %}
 
 {% block title %}Faculdade Impacta - Home{% endblock %}
 
