--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -1,14 +1,57 @@
-html {
-	font-family: arial;
-}
-body.corpo {
+* {
+	box-sizing: border-box;
 	margin: 0px;
 }
+html {
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 .img_logo {
-	width: 10em;
+	width: 12em;
+	height: 3.6em;
+}
+.img_user, .menu_icon {
+	width: 3em;
 	height: 3em;
-	padding-top: 0.5em;
-	padding-left: 2em;
+	margin: 0.5em;
+}
+.user, .dropbtn, .logo {
+	background-color: #2a3c4a;
+	border: 0px black solid
+}
+.dropbtn:hover, .user:hover {
+    background-color: #23313c;
+}
+.dropbtn:focus, .user:focus {
+	box-shadow: 0 0 0 0;
+	border: 0 none;
+	outline: 0;
+}
+.drop_menu, drop_login {
+    position: relative;
+    display: inline-block;
+}
+.conteudo_menu, .conteudo_login {
+    display: none;
+    position: absolute;
+    background-color: #344a5b;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.conteudo_menu a {
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.conteudo_login form {
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.show {
+	display:block;
 }
 nav.menu {
 	display: flex;
@@ -16,63 +59,22 @@ nav.menu {
 	background-color:#2a3c4a;
 	position: fixed;
 	width: 101%;
-	top: -1px;
-	left: -1px;
-	right: -1px;
+	top: 0px;
 	z-index: 1;
-	opacity: 0.88;
+	padding: 0.4em;
+	padding-right: 2em;
+	padding-left: 2em;
+
 }
-a.link {
+.redes_impacta {
 	text-decoration: none;
-	width: 1em;
-	height: 1em;
-}
-a.link:link, a.link:visited {
-	color: #ffffff;
-}
-a.link:hover {
-	color: #afafaf;
-}
-a.link:active {
-	color: #7b7bff;
-}
-.dropmenu {
-	z-index: 1;
-	height: auto;
-	width: 10em;
-	display: none;
-	position: absolute;
-	background-color: #4e5b60;
-	margin-top:0px;
-	list-style: none;
-	padding:1em;
-	right: 0.1em;
-	top: 3.5em;
-	border-radius:5%;
-	line-height: 1.7em;
-}
-.menuhidden {
-	position: relative;
-	height: auto;
-	width: 3em;
-	right:4em;
-	float:right;
-}
-.menuIcon{
-	height:2.7em;
-	width: 4.3em;
-	margin: 0.5em;
-	margin-bottom: 0.1em;
-	padding-top:0.3em;
-}
-.menuhidden:hover .dropmenu {
-	display: block;
 }
 footer {
 	background-color:#e4e4e4;
 	bottom: 0; 
 	width: 100%;
-	height: 30%;
+	position: relative;
+	padding: 0.4em;
 }
 div.sigaImpacta {
 	width: 10em; 
