--- a/core/templates/cursos.html
+++ b/core/templates/cursos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block estilo_unico %}{% static '/' %}css/lista.css{% endblock %}
+{% block estilo_unico %}{% static '/' %}css/cursos.css{% endblock %}
 
 {% block script_unico %}{% endblock %}
 
