--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -60,11 +60,11 @@ a.link:active {
 	border-radius:5%;
 	line-height: 1.7em;
 }
-.show{display:block;}
-.showF{display:flex;}
+
+.show{display: block;}
 
 .menuhidden {
-	display:block;
+	display:inline-block;
 	position: relative;
 	height: auto;
 	width: 3em;
@@ -106,25 +106,25 @@ div.copyright {
 	text-align: center;
 }
 	/* box de login */
-	.userLogin{
-		display:flex;
-		flex-flow:column wrap;
+.userLogin{
+		display:inline-block;
 		position: relative;
-		align-items: center;
+		height:auto;
 		width:20em;
 		background-color: #2a3c4a;
-		z-index: 1;
-	}
+}
 
-	.userIcon{
+.userIcon{
 		width:2.3em;
 		height:2.3em;
-	}
+}
 
-	div.loginForm{
+.loginFrame{
+		position:relative;
+		height:auto;
 		display:none;
-		position: absolute;
-	}
+		z-index: 1;
+}
 
 	.loginForm{
 		display:flex;
