--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -29,11 +29,9 @@
 						{% if logado == False %}
 						<form class="flexForm" method="POST">
 							{% csrf_token %}
-							<label for="ra">RA: </label>
-							<input id="ra" class="informs" name="ra" required/>
-							<label for="senha" required>Senha: </label>
-							<input id="senha" class="informs" name="senha" type="password" required/>
-							<button type="submit">Enviar</button>
+							RA: <input id="ra" class="informs" name="ra" required/>
+							Senha: <input id="senha" class="informs" name="senha" type="password" required/>
+							<button id='btn_submit' onclick='error_messege()' type="submit">Enviar</button>
 							<a class="formLogin" href="#Esqueci_a_senha">Esqueci a senha.</a>
 						</form>
 						{% else %}
