--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -12,7 +12,11 @@
 	<section>
 		<div class = "Banner">
 			<img class = "Banner img_banner" src = "{% static '/' %}img/Propaganda-vestibular.png"
-			alt = "propaganda do vestibular 2018" id = "bannerIndex"/>
+			alt = "propaganda do vestibular 2018" />
+ 		</div>
+ 		<div class = "BannerCell">
+ 			<img class = "BannerCell" src = "{% static '/' %}img/BannerCell.png"
+ 			alt = "propaganda do vestibular 2018 mobile" />
 		</div>
 		<article class = "sobre">
 			<h1 class = "sobre">Sobre</h1>
