Controle de acesso funcionando (senha ainda não verificada)

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,10 +38,10 @@
 						</form>
 						{% else %}
 						<nav>
-							{% if tipo_user == 'aluno' %}
-							<a href='#Aluno'>Área do aluno</a>
-							{% elif tipo_user == 'professor' %}
-							<a href='#Professor'>Área do professor</a>
+							{% if tipo_user == 'Aluno' %}
+							<a href='area_aluno.html'>Área do aluno</a>
+							{% elif tipo_user == 'Professor' %}
+							<a href='area_professor.html'>Área do professor</a>
 							{% endif %}
 						</nav>
 						{% endif %}
