--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -20,6 +20,7 @@ nav.menu {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content:space-between;
+	align-content: center;
 	background-color:#2a3c4a;
 	position: fixed;
 	width: 100%;
@@ -30,11 +31,7 @@ nav.menu {
 	opacity: 0.88;
 }
 a.link {
-	display: flex;
-	align-self: flex-start;
 	text-decoration: none;
-	width: 1em;
-	height: 1em;
 }
 a.link:link, a.link:visited {
 	color: #ffffff;
@@ -61,22 +58,29 @@ a.link:active {
 	line-height: 1.7em;
 }
 
-.show{display: block;}
+.show{display: inline-block;}
 
-.menuhidden {
+.conteudo_menu {
+	display:none;
+	position: absolute;
+	width: 3em;
+	z-index: 1;
+	background-color: #4e5b60;
+}
+.menu_icon{
+	height:2em;
+	width: 2em;
+}
+.drop_menu{
 	display:inline-block;
 	position: relative;
-	height: auto;
-	width: 3em;
-	right:4em;
-	float:right;
+	background-color: rgb(0,0,0,0);
 }
-.menuIcon{
-	height:2.7em;
-	width: 4.3em;
-	margin: 0.5em;
-	margin-bottom: 0.1em;
-	padding-top:0.3em;
+.dropbtn{
+	width:4em;
+	height:4em;
+	background-color: #2a3c4a;
+	border:none;
 }
 footer {
 	background-color:#e4e4e4;
@@ -106,57 +110,62 @@ div.copyright {
 	text-align: center;
 }
 	/* box de login */
-.userLogin{
-		display:inline-block;
-		position: relative;
-		height:auto;
-		width:20em;
-		background-color: #2a3c4a;
+.drop_login{
+	display:inline-block;
+	position: relative;
+	background-color: rgb(0,0,0,0);
 }
 
-.userIcon{
-		width:2.3em;
-		height:2.3em;
+.conteudo_login{
+	position:relative;
+	height:auto;
+	display:none;
+	z-index: 1;
+	background-color: #4e5b60;
 }
 
-.loginFrame{
-		position:relative;
-		height:auto;
-		display:none;
-		z-index: 1;
+.user{
+	width:4em;
+	height:4em;
+	background-color: #2a3c4a;
+	border:none;
 }
 
-	.loginForm{
-		display:flex;
-		flex-flow:column wrap;
-		align-items: center;
-		width:80%;
-		margin-bottom: 1em;
-	}
+.img_user{
+	width:3em;
+	height:3em;
+}
 
-	.inputGroup{
-		display:flex;
-		justify-content: space-between;
-		align-items: center;
-		margin-top:1em;
-		color: white;
-		font-weight: bold;
-		width:100%;
-	}
+.flexForm{
+	display:flex;
+	flex-flow:column wrap;
+	align-items: center;
+	width:80%;
+	margin-bottom: 1em;
+}
 
-	.inputField{
-		width:75%;
-		height:2em;
-		border:none;
-		border-radius:5px;
-	}
+.inputGroup{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top:1em;
+	color: white;
+	font-weight: bold;
+	width:100%;
+}
+.inputField{
+	width:75%;
+	height:2em;
+	border:none;
+	border-radius:5px;
+}
 
-	.btnLogin{
-		margin-top:1.3em;
-		border-radius: 10px;
-		font-size: 1.2em;
-		width:40%;
-	}
+.btnLogin{
+	margin-top:1.3em;
+	border-radius: 10px;
+	font-size: 1.2em;
+	width:40%;
+}
 @media only screen and (min-width: 320px) and (max-width: 736px)
 {
 	h3.sigaImpacta {
@@ -221,3 +230,50 @@ h3.comentsAlunos {
 	
 }
 
+/* Area do Aluno */
+.areaAluno{
+	display:flex;
+	justify-content: space-between;
+	align-content: flex-start;
+	position:relative;
+	width:100%;
+	top:50px;
+	padding-top:2em;
+}
+.listLinks{
+	width:15em;
+	height:9em;
+	background-color: lightgray;
+	border-top-right-radius: 2%;
+	border-bottom-right-radius: 2%;
+}
+.liLink{
+	list-style: none;
+	font-family: arial;
+	font-size: 1.2em;
+	color:#ffffff;
+	font-weight: bold;
+	text-decoration: none;
+	line-height: 1.4em;
+}
+
+.msgPanel{
+	display: flex;
+	justify-content: center;
+	width:40em;
+	height:30em;
+	background-color: lightgrey;
+	margin-right: 5em;
+	margin-bottom: 5em;
+}
+.msg{
+	width:97%;
+	border-bottom: 1px solid black;
+	background-color: white;
+}
+.remetente{
+	font-weight: bold;
+}
+.texto{
+	margin-left:5px;
+}
