--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -34,7 +34,7 @@
 							<label for="senha" required>Senha: </label>
 							<input id="senha" class="informs" name="senha" type="password" required/>
 							<button type="submit">Enviar</button>
-							<a class="formLogin" href="#Esqueci_a_senha">Esqueci a senha.</a>
+							<a class="formLogin" href="recuperar_senha.html">Esqueci a senha.</a>
 						</form>
 						{% else %}
 						<nav>
