--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width = device-width, initial-scale = 1.0" />
@@ -11,25 +12,27 @@
 	<script src="{% block script_unico %}{% endblock %}"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
 	<header>
-		<nav class="menu">
-			<a href="/" title="Logo Faculdade Impacta">
-				<img class="img_logo" src="{% static '/' %}img/logo-novo.png" alt="Logo e link para a home" />
-			</a>
-			<div class="linkBtn"><a class="link" href="cursos.html" title="Cursos">Cursos</a></div>
-			<div class="linkBtn"><a class="link" href="noticias.html" title="Notícias">Notícias</a></div>
-			<div class="drop_login">
-				<button class="user" onclick="login_function()" title="{% if logado == False %}Sign In{% else %}
+		<div class="motherNav">
+			<nav class="menu">
+				<a href="/" title="Logo Faculdade Impacta">
+					<img class="img_logo" src="{% static '/' %}img/logo-novo.png" alt="Logo e link para a home" />
+				</a>
+				<div class="linkBtn"><a class="link" href="cursos.html" title="Cursos">Cursos</a></div>
+				<div class="linkBtn"><a class="link" href="noticias.html" title="Notícias">Notícias</a></div>
+				<div class="drop_login">
+					<button class="user" onclick="login_function()" title="{% if logado == False %}Sign In{% else %}
 						Logged{% endif %}">
-					<img class="img_user" src="{% if logado == False %}{% static '/' %}img/img_user.png
+						<img class="img_user" src="{% if logado == False %}{% static '/' %}img/img_user.png
 						{% else %}{% static '/' %}img/img_user.png{% endif %}" alt="{% if logado == False %}
 						Sign In{% else %}Your Picture{% endif %}" />
-				</button>
-			</div>
-		</nav>
-		<div id="drop_login" class="conteudo_login">
+						</button>
+				</div>
+			</nav>
 			
+			<div id="drop_login" class="conteudo_login">
 				<form class="flexForm" method="POST">
 					{% csrf_token %}
 					<div class="inputGroup">
@@ -40,18 +43,16 @@
 						<label for="senha" required>Senha: </label>
 						<input id="senha" class="informs" name="senha" type="password" required/>
 					</div>
-					<button class="btnLogin"type="submit">Enviar</button>
+					<button class="btnLogin" type="submit">Enviar</button>
 					<a class="formLogin" href="#Esqueci_a_senha">Esqueci a senha.</a>
-				</div>
-				
-				<div>
-					{% if tipo_user == 'aluno' %}
-					<a href='areaAluno.html'>Área do aluno</a>
-					{% elif tipo_user == 'professor' %}
-					<a href='#Professor'>Área do professor</a>
-					{% endif %}-->
 				</form>
-				
+			</div>
+
+			<div>
+				{% if tipo_user == 'aluno' %}
+				<a href='areaAluno.html'>Área do aluno</a> {% elif tipo_user == 'professor' %}
+				<a href='#Professor'>Área do professor</a> {% endif %}
+			</div>
 		</div>
 	</header>
 	<main>
@@ -77,7 +78,7 @@
 					<img src="{% static '/' %}img/linkedin.png" alt="Linkedin Faculdade Impacta" />
 				</a>
 			</nav>
-			
+
 		</div>
 		<div class="copyright">
 			<h4>© Grupo Draco 2017. Todos os direitos reservados. Política de privacidade
@@ -85,4 +86,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
