--- a/core/static/css/login.css
+++ b/core/static/css/login.css
@@ -19,7 +19,7 @@ form {
 button:hover {
 	box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-button {
+/*.classe {
 	width: 20%;
 	padding: 5px 15px;
 	border-radius: 7px;
@@ -31,7 +31,7 @@ button {
 }
 .flexForm {
 	justify-content: center;
-}
+}*/
 .itens {
 	display: flex;
 	justify-content: space-between;
